# standardese

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  environment.yml  rever.xsh  standardese-config.cmake  travis_get_standardese.sh  travis_install_libclang.sh
.github/: issue_template  pull_request_template
.github/workflows/: cancel.yml  test.yml
examples/: README.md
examples/links/: README.md
examples/links/doc/: .gitignore  Makefile  index.md
examples/links/src/: AB.hpp  C.hpp
examples/mathjax/: README.md
examples/mathjax/doc/: Gemfile  Makefile  _config.yml  index.md
examples/mathjax/doc/_includes/: footer.html
examples/mathjax/src/: mathjax.hpp
include/standardese/: comment.hpp  config.hpp  cpp_class.hpp  cpp_cursor.hpp  cpp_entity.hpp  cpp_entity_blacklist.hpp  cpp_entity_registry.hpp  cpp_enum.hpp  cpp_function.hpp  cpp_namespace.hpp  cpp_preprocessor.hpp  cpp_template.hpp  cpp_type.hpp  cpp_variable.hpp  doc_entity.hpp  error.hpp  generator.hpp  index.hpp  linker.hpp  logger.hpp  md_blocks.hpp  md_custom.hpp  md_entity.hpp  md_inlines.hpp  output.hpp  output_format.hpp  output_stream.hpp  parser.hpp  preprocessor.hpp  section.hpp  string.hpp  synopsis.hpp  template_processor.hpp  translation_unit.hpp
include/standardese/comment/: commands.hpp  config.hpp  doc_comment.hpp  matching_entity.hpp  metadata.hpp  parser.hpp
include/standardese/detail/: entity_container.hpp  parse_utils.hpp  preprocessor.hpp  raw_comment.hpp  scope_stack.hpp  search_token.hpp  sequence_stream.hpp  synopsis_utils.hpp  tokenizer.hpp  wrapper.hpp
include/standardese/markup/: block.hpp  blockquote.hpp  code_block.hpp  doc_section.hpp  document.hpp  documentation.hpp  entity.hpp  entity_kind.hpp  generator.hpp  heading.hpp  index.hpp  link.hpp  list.hpp  paragraph.hpp  phrasing.hpp  quote.hpp  thematic_break.hpp  visitor.hpp
news/: TEMPLATE.rst  catch.rst  cpp17.rst  cpp20-support.rst  cppast-docker.rst  docker.rst  free-file-comments.rst  group-uncommented.rst  hideundocumented.rst  install-shared-lib.rst  install.rst  keep_comments_in_macro_flag.rst  mathjax.rst  patterns.rst  rever.rst  rst.rst  shared.rst  travis.rst  unnamed.rst  windows-function.rst
src/: CMakeLists.txt  comment.cpp  config.cpp  cpp_class.cpp  cpp_entity.cpp  cpp_entity_blacklist.cpp  cpp_enum.cpp  cpp_function.cpp  cpp_namespace.cpp  cpp_preprocessor.cpp  cpp_template.cpp  cpp_type.cpp  cpp_variable.cpp  doc_entity.cpp  entity_visitor.hpp  error.cpp  generator.cpp  get_special_entity.hpp  index.cpp  linker.cpp  md_blocks.cpp  md_custom.cpp  md_entity.cpp  md_inlines.cpp  output.cpp  output_format.cpp  output_stream.cpp  parser.cpp  preprocessor.cpp  synopsis.cpp  template_processor.cpp  translation_unit.cpp
src/comment/: cmark_ext.cpp  cmark_ext.hpp  cmark_ext_command.cpp  cmark_ext_command.hpp  config.cpp  doc_comment.cpp  parser.cpp
src/comment/cmark-extension/: cmark_extension.cpp  cmark_extension.hpp
src/comment/command-extension/: command_extension.cpp  command_extension.hpp  user_data.cpp  user_data.hpp
src/comment/ignore-html-extension/: ignore_html_extension.cpp  ignore_html_extension.hpp
src/comment/verbatim-extension/: verbatim_extension.cpp  verbatim_extension.hpp
src/detail/: parse_utils.cpp  preprocessor.cpp  raw_comment.cpp  scope_stack.cpp  synopsis_utils.cpp  tokenizer.cpp
src/markup/: block.cpp  blockquote.cpp  code_block.cpp  doc_section.cpp  document.cpp  documentation.cpp  entity_kind.cpp  escape.hpp  generator.cpp  heading.cpp  html.cpp  html_helper.cpp  html_helper.hpp  index.cpp  link.cpp  list.cpp  markdown.cpp  paragraph.cpp  phrasing.cpp  quote.cpp  thematic_break.cpp  visitor.cpp  xml.cpp
src/util/: enum_values.hpp
test/: CMakeLists.txt  comment.cpp  cpp_entity.cpp  cpp_entity_blacklist.cpp  cpp_function.cpp  cpp_namespace.cpp  cpp_preprocessor.cpp  cpp_template.cpp  cpp_type.cpp  cpp_variable.cpp  doc_entity.cpp  documentation.cpp  index.cpp  linker.cpp  output.cpp  preprocessor.cpp  synopsis.cpp  template.cpp  test.cpp  test_logger.hpp  test_parser.hpp
test/comment/: parser.cpp
test/markup/: blockquote.cpp  code_block.cpp  document.cpp  documentation.cpp  heading.cpp  index.cpp  link.cpp  list.cpp  paragraph.cpp  phrasing.cpp  quote.cpp  thematic_break.cpp
test/util/: indent.cpp  indent.hpp
test/util/assertions/: sections.cpp  sections.hpp
tool/: CMakeLists.txt  filesystem.hpp  generator.cpp  generator.hpp  main.cpp  options.hpp  thread_pool.hpp
